update(color):correction contraste

--- a/assets/style_ancien.css
+++ b/assets/style_ancien.css
@@ -219,7 +219,7 @@ body {
 }
 .picture.right::before {
 	content: ' ';
-	background-color: #BEB45A;
+	background-color: #9D9335;
 	width: 374px;
 	height: 329px;
 	position: absolute;
@@ -256,7 +256,7 @@ form textarea {
 	margin-bottom: 20px;
 }
 input[type="submit"] {
-	background-color: #BEB45A;
+	background-color: #9D9335;
 	padding: .5em 1em
 }
 
